--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
-.terraform*
+.terraform.lock.hcl*
 
 # .tfstate files
 *.tfstate
-*.tfstate.*
 *.tfstate.*
 # Crash log files
 crash.log
